# gomlx

./: .gitignore  .gitmodules  Makefile  README.md  bench_test.go  chat.go  chat_test.go  errors.go  generate.go  go.mod  gomlx.go  memory.go  model.go  model_test.go  types.go  vision.go
.github/workflows/: ci.yml  release.yml
examples/text-chat/: main.go
examples/text-test/: main.go
examples/vision-describe/: main.go
examples/vision-detect/: main.go
examples/vision-point/: main.go
internal/bridge/: bridge.go  bridge_region.go  bridge_vision.go  callback.go
internal/tokenizer/: tokenizer.go
mlxlib/: CMakeLists.txt  base_model.h  config.cpp  config.h  image_processor.cpp  image_processor.h  kv_cache.cpp  kv_cache.h  mlx_bridge.cpp  mlx_bridge.h  model_registry.cpp  model_registry.h  quantized_linear.cpp  quantized_linear.h  qwen_image_processor.cpp  qwen_image_processor.h  sampling.cpp  sampling.h  stb_image_impl.cpp
mlxlib/models/gemma/: gemma2_text.cpp  gemma2_text.h
mlxlib/models/llama/: llama_text.cpp  llama_text.h  llama_vision.cpp  llama_vision.h  vision_encoder.cpp  vision_encoder.h
mlxlib/models/mistral/: mistral_text.cpp  mistral_text.h
mlxlib/models/moondream/: moondream.cpp  moondream.h  moondream_image_processor.cpp  moondream_image_processor.h  moondream_vision_encoder.cpp  moondream_vision_encoder.h
mlxlib/models/qwen/: qwen2_5_vl.cpp  qwen2_5_vl.h  qwen2_text.cpp  qwen2_text.h  qwen_vision_encoder.cpp  qwen_vision_encoder.h
scripts/: download-model.sh  fetch-tokenizer-lib.sh
